[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgistats"
version = "0.1.0"
description = "ASGI and WSGI middleware for collecting request and response metrics"
authors = [
    {name = "Anton", email = "vontonau@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Add your project dependencies here, for example:
    # "aiohttp>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "flake8",
    "black",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sgistats*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']